Fix bug 119117 "nsDiskCacheMap.h compiler warning". sr=darin.